# RT1_ROS

./: README.md
Document/: How to use wifi-localization  HowTo_setup_Wifidongle  Using the RT2 - Jose Version  sensor data format.txt
nav_stack/: CMakeLists.txt  frames.gv  package.xml
nav_stack/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
nav_stack/config2/: costmap_common_params.yaml  move_base_params.yaml
nav_stack/config3/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
nav_stack/config_6Jume/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
nav_stack/config_R/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml
nav_stack/config_githubnow/: costmap_common_params.yaml  dwa_local_planner_params.yaml
nav_stack/launch/: laser_scan_matcher.launch  navigation.rviz  rviz.launch  whill_amcl.launch  whill_amcl_norviz.launch
nav_stack/launch/include/: amcl.launch.xml  move_base.launch.xml
nav_stack/map/: F5.pgm  F5.yaml  lab_crop.pgm  lab_crop.yaml  lab_mod.xcf  lab_mod.yaml
rosrt/: CMakeLists.txt  README.md  Using the RT2 - Jose Version  package.xml
rosrt/include/: location.h  locfind.h  rt1.h  rt1_nav.h  rt1_param.h  rt1nav_param.h  wifi.h
rosrt/launch/: frames.gv  hector.launch  laser_scan_matcher.launch  rt1.launch  rt1_laser.launch  rt1_urg.launch  scan.launch  wifi_robot.launch  wifitest_moving.launch  wifitest_static.launch
rosrt/msg/: Difficulty.msg  PointRss.msg  RssAvg.msg  RssDatumAvg.msg  Rt1Sensor.msg
rosrt/scripts/: create_udev_rules.sh  sample.py  sample.py~
rosrt/scripts/src/: rt1_con.cpp  rt1_node.cpp
rosrt/src/: algorithm.cpp  find_location.cpp  location_node.cpp  move.cpp  rosrt_rt1.cpp  rosrt_rt1_cmdtor_handle.cpp  rosrt_rt1_tor.cpp  rosrt_rt1_torvel.cpp  rosrt_rt1_vel.cpp  rosrt_rt2.cpp  rt1_con.cpp  rt1_handle.cpp  rt1_nav.cpp  rt1_node.cpp  rt1_odom.cpp  version.h  wifi_node.cpp
rosrt/srv/: Service.srv
rplidar_ros/: CMakeLists.txt  README.md  package.xml
rplidar_ros/launch/: angled_rplidar.launch
rplidar_ros/msg/: Difficulty.msg
rplidar_ros/src/: angled_compensator.h  angled_rplidar.cpp  angled_rplidar.h  angled_rplidar_node.cpp  client.cpp  node.cpp  obsta_angled.cpp  obstacle_detect.cpp  rplidar_param.h
rt1_navigation/: CMakeLists.txt  README.md  package.xml
rt1_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml
rt1_navigation/config2/: dwa_local_planner_params.yaml  local_costmap_params.yaml
rt1_navigation/launch/: amcl.launch  navigation.rviz  rt1_amcl.launch  rviz.launch  test.launch  whill_amcl.launch
rt1_navigation/launch/include/: amcl.launch.xml  laser_amcl.launch.xml
rt1_navigation/map/: lab_temp.yaml  lab_v2_3.yaml
wifi_localization/: .~lock.Wifi analysis 2.ods#  .~lock.Wifi analysis.ods#  CMakeLists.txt  README.md  RMS Analysis.ods  Wifi analysis.ods  criteria_test.txt  criteria_test1.txt  heatmap.db  package.xml  rms.txt  rss_kalman_comparison.txt  rss_kalman_comparison1.txt  test.db
wifi_localization/Analysis/: Goal_Error_Analysis_6_14.xlsx  Goal_Error_Analysis_6_16.xlsx  Goal_Error_Analysis_Template.xlsx  Goal_Error_Analysis~6_14.xlsx  Wifi analysis 2.ods
wifi_localization/Data/: criteria_test.txt  experiment.txt  wifi_monitor.txt
wifi_localization/db/: exp_result(3,6).txt  exp_result(4,10).txt  exp_result(4,12).txt  exp_result(4,13).txt  exp_result(4,14).txt  exp_result(4,15).txt  exp_result(4,18).txt  exp_result(4,19).txt  exp_result(4,4).txt  exp_result(4,5).txt  exp_result(4,6).txt  exp_result(4,7).txt  exp_result(4,8).txt  exp_result(4,9).txt  exp_result(5,17).txt  exp_result(5,18).txt  exp_result(6,17).txt  exp_result(6,18).txt  exp_result(6,19).txt  exp_result(7,17).txt  exp_result(7,18).txt  exp_result(7,19).txt  heatmap.db  heatmap.db-journal
wifi_localization/db_7Aug/: 2019-08-07-21-41-05.bag  exp2_result(,).txt  exp2_result(4,14,6,18).txt  exp2_result(4,18,4,14).txt  exp2_result(long,1).txt  exp2_result(long,2).txt  exp_result(3,6).txt  exp_result(4,13).txt  exp_result(4,14).txt  exp_result(4,17).txt  exp_result(4,3).txt  exp_result(4,4).txt  exp_result(4,7).txt  exp_result(5,18).txt  exp_result(5,19).txt  exp_result(6,19).txt  exp_result(7,19).txt  exp_result(a,b).txt  extra1_2019-08-07-21-41-16.bag  extra1_2019-08-07-21-55-01.bag  extra1_2019-08-07-22-00-39.bag  extra2_2019-08-07-22-04-08.bag  extra3_2019-08-07-22-08-08.bag  extra3_2019-08-07-22-10-35.bag  heatmap.db  heatmap_gooddb.db  heatmap_old.db  long1_2019-07-26-23-26-44.bag  long2_2019-07-26-23-35-27.bag  long2_2019-07-26-23-36-57.bag  med1_2019-07-26-23-47-01.bag  med2_2019-07-26-23-53-17.bag  short1_2019-07-27-00-02-26.bag
wifi_localization/include/: include_wifi_nav.h  location.h  locfind.h  rt1_nav.h  wifi.h  wifi_nav.h  wifi_nav_recursive.h
wifi_localization/launch/: scan.launch  wifi_robot.launch
wifi_localization/msg/: RssDatumAvg.msg
wifi_localization/scripts/: create_udev_rules.sh  init.sh  odomtransformer.py  rt1.rules  sample-dos.py  sample.py
wifi_localization/scripts/rss/: acquire  acquire_dongle  acquire_wlp3s0
wifi_localization/src/: .cpp  db_test.cpp  find_location.cpp  location_node.cpp  measure.cpp  move.cpp  movestop_ap.cpp  rosrt_rti.cpp~  straight.cpp  straight_ap.cpp  straight_rms.cpp  trajectory.cpp  wifi_database.cpp  wifi_nav.cpp  wifi_nav_goal.cpp  wifi_nav_goal_sim.cpp  wifi_nav_recursive.cpp  wifi_node.cpp
